Implementing numerous issues
